--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-FINANCIAL_DATASETS_API_KEY=<your-financial-datasets-api-key>
-TAVILY_API_KEY=<your-tavily-api-key>
-WEAVE_API_KEY=<your-weave-api-key>
+FINANCIAL_DATASETS_API_KEY=05aa56cf-71cd-4911-b449-fb1dc316a1a7
+TAVILY_API_KEY=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
+WEAVE_API_KEY=7edd89e77300e90b703b8d208eae2aed3ed566ba
