--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-FINANCIAL_DATASETS_API_KEY=05aa56cf-71cd-4911-b449-fb1dc316a1a7
-TAVILY_API_KEY=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
-WEAVE_API_KEY=7edd89e77300e90b703b8d208eae2aed3ed566ba
+WEAVE_API_KEY=<your_weave_api_key>
+TRAVILY_API_KEY=<your_travily_api_key>
+FINANCIAL_DATASET_API=<your_financial_dataset_api_key>
