code updates, working version

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-WEAVE_API_KEY=<your_weave_api_key>
-TRAVILY_API_KEY=<your_travily_api_key>
-FINANCIAL_DATASET_API=<your_financial_dataset_api_key>
+WEAVE_API_KEY=<your-weave-api-key>
+TAVILY_API_KEY=<your-tavily-api-key>
+FINANCIAL_DATASET_API=<your-financial-dataset-api-key>
